# root_lwtnn

./: .gitignore  CMakeLists.txt  README.md
cmake/: Findlwtnn.cmake
src/: CMakeLists.txt  root_lwtnn.cxx
test/: CMakeLists.txt  duplicate.py  lwtnn_convert.sh  test_pythonc.cxx  train.py  variables.json
